--- a/styles/style.css
+++ b/styles/style.css
@@ -80,6 +80,18 @@ h2 {
   font-weight: 200;
   font-size: 7.5em;
   line-height: 0;
+  animation: show 2s forwards;
+}
+
+@keyframes show {
+  from {
+    opacity: 0;
+    transform: translate3d(-30px, 0, 0);
+  }
+  to {
+    opacity: 1;
+    transform: translate3d(0px, 0, 0);
+  }
 }
 
 .main h1:nth-child(1) {
